[package]
name = "belajar-rust-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.18", features = ["full"] }

[build-dependencies]
tonic-build = "0.7"
